@@ -6,11 +6,12 @@
     <parent>
         <groupId>org.openeuler</groupId>
         <artifactId>gmssl</artifactId>
-        <version>1.1.4</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>tomcat-adaptor</artifactId>
     <packaging>jar</packaging>
+    <name>tomcat-adaptor</name>
 
     <properties>
         <tomcat.version>9.0.83</tomcat.version>
@@ -113,7 +114,6 @@
                 <argLine>
                     --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
                     --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
                 </argLine>
             </properties>
         </profile>
